force-app/main/default/objects/NBA_Cadence__mdt/NBA_Cadence__mdt.object-meta.xml
<CustomObject>
    <description>Defines a complete outreach cadence (e.g., First Touch, Re-engage). Parent record for NBA_Cadence_Step__mdt steps. Controls exit conditions, day mapping, and variant assignment.</description>
    <label>GTM Cadence</label>
    <pluralLabel>GTM Cadences</pluralLabel>
</CustomObject>