force-app/main/default/objects/NBA_Cadence__mdt/fields/Anchor_Field__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Field__c</fullName>
    <description>OpportunitySignal field name used for cadence day computation. Default: daysSinceCreation. Alt: daysSinceLastInteraction.</description>
    <label>Anchor Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>