force-app/main/default/objects/NBA_Cadence__mdt/fields/Day_Map__c.field-meta.xml
<CustomField>
    <fullName>Day_Map__c</fullName>
    <description>JSON mapping of raw calendar days to cadence days. E.g., {"0":0,"1":1,"2":3,"3":3,"4":5,"5":5}. If null, raw days are used directly.</description>
    <label>Day Map</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>