force-app/main/default/objects/NBA_Cadence__mdt/fields/Exit_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Exit_Conditions__c</fullName>
    <description>Comma-separated conditions that end the cadence early. Values: Connected_Call, Meeting_Scheduled, Opp_Closed, Manual_Override.</description>
    <label>Exit Conditions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>