force-app/main/default/objects/NBA_Cadence__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this cadence is active. Inactive cadences are ignored by the engine.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>