force-app/main/default/objects/NBA_Cadence__mdt/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <description>Business scenario this cadence applies to. Maps to determineActionType() output in NbaActionCreationService.</description>
    <label>Scenario</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Touch</fullName>
            </value>
            <value>
                <fullName>Re-engage</fullName>
            </value>
            <value>
                <fullName>Stage Progression</fullName>
            </value>
            <value>
                <fullName>Win Back</fullName>
            </value>
            <value>
                <fullName>Post-Demo Follow-Up</fullName>
            </value>
            <value>
                <fullName>Closing Follow-Through</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>