force-app/main/default/objects/NBA_Cadence__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <description>Opportunity stage this cadence applies to (New, Connect, Consult, Closing)</description>
    <length>80</length>
    <type>Text</type>
</CustomField>