force-app/main/default/objects/NBA_Cadence__mdt/fields/Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Days__c</fullName>
    <description>Total span of the cadence in calendar days (e.g., 5 for First Touch).</description>
    <label>Total Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>