force-app/main/default/objects/NBA_Cadence__mdt/fields/Total_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Steps__c</fullName>
    <description>Total number of actionable steps in this cadence. Used for Step X of Y progress display.</description>
    <label>Total Steps</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>