force-app/main/default/objects/NBA_Cadence__mdt/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <description>A/B variant identifier. Resolved per AE from NBA_AE_Config__c hierarchy custom setting.</description>
    <label>Variant</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>